test/src/e2e_vm_tests/test_programs/should_pass/language/marker_traits/marker_trait_error_implemented_for_str/src/use_error_via_glob.sw
library;

use std::marker::*;

fn implements_error<T>(_t: T) where T: Error { }
fn implements_error_no_args<T>() where T: Error { }

pub fn test() {
    implements_error("str");
    implements_error_no_args::<str>();
}
