test/src/e2e_vm_tests/test_programs/should_fail/module_cyclic_reference/src/a.sw
library;

use ::b::*;

pub fn a() { b(); }
